feat: created a middleware and handler for dispatcherApplication and altered the tables
