# docs/swagger.json
@@ -16,6 +16,95 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/admin/dispatcher-applications": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get All Dispatcher Applications",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "DispatchersApply"
+                ],
+                "summary": "Get Dispatcher Applications",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.dispatcherResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/admin/dispatcher-applications/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get Dispatcher Application by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "DispatchersApply"
+                ],
+                "summary": "Get Dispatcher Application",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Dispatcher Application ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.dispatcherResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/auth/change-password": {
             "put": {
                 "security": [
@@ -271,12 +360,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Dispatchers"
+                    "DispatchersApply"
                 ],
                 "summary": "Create dispatcher application",
                 "parameters": [
                     {
-                        "description": "Dispatcher payload",
+                        "description": "Dispatcher Application payload",
                         "name": "payload",
                         "in": "body",
                         "required": true,
